# test_service

./: .gitignore  Dockerfile  database.db  deployment.ymal  ingress.ymal  ingressold.ymal  note.md  pyproject.toml  rabbitmq.yaml  service.ymal
postgress/: 2-psql-pv.yaml  db_deployment.yaml
src/: db_connection.py  main.py  receive.py  send.py
