[tool.poetry]
name = "test-service"
version = "0.1.0"
description = ""
authors = ["Greg McCarthy <6regmcc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.5"}
sqlalchemy = "^2.0.36"
pika = "^1.3.2"
aio-pika = "^9.5.4"
psycopg = {extras = ["binary"], version = "^3.2.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
